# patchnote-prasia

./: .env.example  .gitattributes  .gitignore  HANDOFF.md  README.md  architecture.md  pyproject.toml  schema.sql
dashboard/: demo.html  index.html
dashboard/assets/css/: style.css
dashboard/assets/js/: app.js  config.js
data/: vector_index.dense.joblib  vector_index.json
docs/: ingestion-strategy.md  query-optimization-plan.md  review-workflow.md  search-improvement-spec.md  team-start-here.md
scripts/: check_board_parity.py  check_counts.py  check_docs_consistency.py  check_latest_run.py  master_ingest.py  test_encoding.py
src/patchnote_prasia/: analyze.py  api.py  cli.py  config.py  crawler.py  db.py  dense_index.py  enrich.py  events.py  ingest.py  review_checks.py  search.py  storage.py  vector_index.py
tests/: test_analyze.py  test_api.py  test_cli.py  test_config.py  test_crawler.py  test_enrich.py  test_review_checks.py  test_search.py  test_search_quality.py  test_storage.py  test_vector_index.py
